--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
     </header>
 
     <!-- ===== HERO SLIDER ===== -->
-    <section class="slider" id="home">
+    <section class="slider pb50" id="home">
         <div class="slide active">
             <img src="images/keegan-houser--Q_t4SCN8c4-unsplash.jpg" alt="Web Developer Mohit Shiv" loading="lazy" />
             <div class="slide-content">
-                <h1>Hello, I'm <span>Mohit Shiv</span></h1>
+                <h1>Hello, I'm  <span>Mohit Shiv</span></h1>
                 <p>Web Developer | Full Stack Learner</p>
             </div>
         </div>
@@ -62,7 +62,7 @@
     <hr />
 
     <!-- ===== ABOUT ME ===== -->
-    <section id="about-me">
+    <section id="about-me" class="pb50">
         <div class="about-container">
             <div class="about-image">
                 <img src="images/about.jpg" alt="Mohit Shiv - About Me" loading="lazy" />
@@ -88,7 +88,7 @@
     <hr />
 
     <!-- ===== SKILLS ===== -->
-    <section id="skills">
+    <section id="skills" class="pb50">
         <h2 class="section-title">My Skills</h2>
         <div class="skills-container">
             <div class="skill-card">
@@ -121,7 +121,7 @@
     <hr />
 
     <!-- ===== PROJECTS ===== -->
-    <section id="projects">
+    <section id="projects" class="pb50">
         <h2>Projects</h2>
         <div class="projects-wrapper">
             <div class="project-card">
@@ -140,7 +140,7 @@
     <hr />
 
     <!-- ===== CONTACT ===== -->
-    <section id="contact">
+    <section id="contact" class="pb50">
         <h2>Contact Me</h2>
         <p>Feel free to drop me a message below:</p>
 
